# Suna-Clone

backend/: .env  .gitignore  main.py  pyproject.toml  run_agent_background.py
backend/agent/: agent_builder_prompt.py  api.py  gemini_prompt.py  message_tool.py  prompt.py  run.py
backend/agent/tools/: computer_use_tool.py  data_providers_tool.py  expand_msg_tool.py  mcp_tool_wrapper.py  message_tool.py  sb_browser_tool.py  sb_deploy_tool.py  sb_expose_tool.py  sb_files_tool.py  sb_shell_tool.py  sb_vision_tool.py  update_agent_tool.py  web_search_tool.py
backend/agent/tools/data_providers/: ActiveJobsProvider.py  AmazonProvider.py  LinkedinProvider.py  RapidDataProviderBase.py  TwitterProvider.py  YahooFinanceProvider.py  ZillowProvider.py
backend/agentpress/: context_manager.py  tool.py
backend/agentpress/utils/: json_helpers.py
backend/flags/: api.py  flags.py  setup.py
backend/sandbox/: api.py  sandbox.py
backend/services/: langfuse.py  llm.py  redis.py  supabase.py
backend/utils/: auth_utils.py  config.py  constants.py  files_utils.py  logger.py
frontend/: package-lock.json  package.json
frontend/src/: error-handler.ts  flags.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  providers.tsx
frontend/src/app/auth/callback/: route.tsx
frontend/src/components/: AuthProvider.tsx
frontend/src/components/home/ui/: flickering-grid.tsx
frontend/src/lib/: api-client.ts  api.ts  config.ts  error-handler.ts  site.ts  utils.ts
frontend/src/lib/supabase/: client.ts  server.ts
frontend/src/providers/: react-query-provider.tsx
