[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daytona-sdk>=0.20.2",
    "dramatiq>=1.18.0",
    "fastapi[standard]>=0.115.12",
    "langfuse>=3.0.0",
    "litellm>=1.72.2",
    "pika>=1.3.2",
    "redis>=6.2.0",
    "stripe>=12.2.0",
    "supabase>=2.15.2",
]
